--- a/css/master.css
+++ b/css/master.css
@@ -274,11 +274,6 @@ label{
     height : 50px;
     display : flex;
 }
-@media screen and (max-width : 1199px) {
-    .gnb{
-        width : 90%;
-    }
-}
 .gnb>li{
     color : white;
     flex : 1;
@@ -295,6 +290,16 @@ label{
         display : flex;
     }
 }
+@media screen and (max-width : 1199px) {
+    .gnb{
+        width : 90%;
+    }
+}
+@media screen and (max-width : 767px) {
+    .gnb>li>a{
+        line-height : 30px;
+    }    
+}
 .headerSub{
     display : flex;
     gap : 20px;
@@ -307,6 +312,7 @@ label{
     background : white;
     border-radius: 0 0 10px 10px;
     padding : 5px 10px;
+    box-shadow : 0 0 3px rgba(0,0,0,0.5);
 }
 .headerSub>li{
     width : max-content;
@@ -374,7 +380,8 @@ label{
     .arrowBtn{
         float : right;
         width : 10%;
-        height : 50px;
+        height : 20px;
+        margin-top : 5px;
         background : url(../images/arrowBtn.svg)50% 50% no-repeat;
         background-size : 100%;
         transition : .3s;
@@ -438,6 +445,10 @@ label{
 @media screen and (max-width : 767px){
     footer>.footerLogo{
         width : 100%;
+        max-width : 180px;
+    }
+    footer>.footerInfo>span{
+        margin-right : 20px;
     }
 }
 footer{
@@ -487,6 +498,10 @@ section{
     section{
         width : 90%;
         margin-bottom : 30px;
+        padding : 20px 0;
+    }
+    #bbs section, #category section{
+        margin : 0 auto 50px;
     }
 }
 @media screen and (max-width : 767px){
@@ -654,7 +669,14 @@ section{
     display : flex;
     min-width : 300px;
     text-align: center;
-    gap : min(60px, 5%);
+}
+@media screen and (max-width : 1199px) {
+    .newBook{
+        width : 100%;
+    }
+}
+.newBook .book{
+    flex : 1;
 }
 #new>div:first-child{
     padding : 20px 0 0;
@@ -714,12 +736,25 @@ section{
 
 
 /*writerIntroPage section##wirterPrize*/
+#writerPrize img {
+    margin : 0 40px 20px 0;
+}
 @media screen and (min-width : 1200px) {
     #writerPrize img {
-        float : left;
         height: 470px;
-        margin-right : 40px;
     }
+}
+@media screen and (min-width : 500px) {
+    #writerPrize img {
+        float : left;
+        max-width : 50%;
+    }
+}
+@media screen and (max-width : 499px) {
+    #writerPrize img{
+        width : 100%;
+    }
+    
 }
 #writerPrize ul li{
     padding : 5px 0;
@@ -731,8 +766,18 @@ section{
     margin-bottom : 10px;
     float : right;
 }
+@media screen and (min-width : 768px) {
+    #interview>img{
+        max-width : 60%;
+    }
+}
+@media screen and (max-width : 767px) {
+    #interview>img{
+        width : 100%;
+    }
+}
 #interview .article{
-    margin : 40px 0 20px;
+    margin : 20px 0 10px;
 }
 .article:nth-of-type(2){
     clear : both;
@@ -765,7 +810,7 @@ section{
     display : flex;
     flex-wrap : wrap;
     gap : 5px 10px;
-    justify-content : space-around;
+    justify-content : space-between;
 }
 #category .lnb>li>a{
     display : block;
@@ -790,13 +835,13 @@ section{
 
 
 /*category .bookSection Union*/
-@media screen and (min-width : 768px) {
+@media screen and (min-width : 500px) {
     .bookSection{
         display : grid;
-        grid-template-areas: 
+        grid-template-areas:
         'bigBook bookDes bookDes'
         'bigBook moreBook moreBook';
-        gap : min(20px, 2%);
+        gap : 30px min(20px, 2%);
     }
     .bookSection>.bookSectionInfo{
         border-bottom : 1px solid #39b057;
@@ -810,6 +855,19 @@ section{
         -webkit-line-clamp : 4;
         overflow : hidden;
     }
+    .goToProduct{
+        height : 100%;
+    }
+}
+@media screen and (max-width : 1000px) {
+    .bookSection>a.book{
+        min-width : 10vw;
+    }
+}
+@media screen and (max-width : 700px) {
+    .bookSection>a.book{
+        min-width : 15vw;
+    }
 }
 .bookSection>a.book{
     grid-area : bigBook;
@@ -820,7 +878,7 @@ section{
     gap : min(30px, 3%);
 }
 .bookMain{
-    min-width : 130px;
+    min-width : 140px;
 }
 .sectionButtons{
     display : flex;
@@ -851,6 +909,9 @@ section{
 .moreBooks>*{
     flex : 1;
 }
+.moreBooks img{
+    height : 100%;
+}
 .moreBooksPlus{
     position: relative;
 }
@@ -874,7 +935,10 @@ section{
         flex : 1;
     }
 }
-@media screen and (max-width : 767px) {
+@media screen and (max-width : 500px) {
+    .goToProduct{
+        margin-bottom : 20px;
+    }
     .moreBooks{
         display : none !important;
     }
@@ -948,15 +1012,13 @@ section{
 
 /*recommendPage section#mainContent*/
 #mainContent{
-    margin-left : 5vw;
     display : flex;
     flex-wrap : wrap;
-    width : 90%;
     gap : 20px;
 }
 .productCard{
     max-width : 100%;
-    flex : 300px 1 1;
+    flex : 350px 1 1;
     display : flex;
     gap : 10px;
     background : #eee;
@@ -975,14 +1037,153 @@ section{
     overflow : hidden;
     margin-top : 10px;
 }
-@media screen and (max-width : 767px) {
+@media screen and (min-width : 1200px){
+    #mainContent{
+        float : right;
+        padding-top : 0;
+        max-width : 850px;
+    }
+    .productCard .cardDescription{
+        line-clamp : 5;
+        -webkit-line-clamp : 5;
+    }
+}
+@media screen and (max-width : 1199px) {
+    .productCard .cardDescription{
+        line-clamp : 10;
+        -webkit-line-clamp : 10;
+    }
+}
+@media screen and (max-width : 1175px) {
+    .productCard .cardDescription{
+        line-clamp : 9;
+        -webkit-line-clamp : 9;
+    }
+}
+@media screen and (max-width : 1120px) {
+    .productCard .cardDescription{
+        line-clamp : 8;
+        -webkit-line-clamp : 8;
+    }
+}
+@media screen and (max-width : 1000px) {
+    .productCard .cardDescription{
+        line-clamp : 7;
+        -webkit-line-clamp : 7;
+    }
+}
+@media screen and (max-width : 965px) {
+    .productCard .cardDescription{
+        line-clamp : 6;
+        -webkit-line-clamp : 6;
+    }
+}
+@media screen and (max-width : 930px) {
+    .productCard .cardDescription{
+        line-clamp : 5;
+        -webkit-line-clamp : 5;
+    }
+}
+@media screen and (max-width : 865px) {
+    .productCard .cardDescription{
+        line-clamp : 4;
+        -webkit-line-clamp : 4;
+    }
+}
+@media screen and (max-width : 799px) {
+    .productCard{
+        flex : 325px 1 1;
+    }
     .productCard .cardDescription{
         line-clamp : 3;
         -webkit-line-clamp : 3;
     }
 }
-.productCard .cartBtn{
-    margin-top : 15px;
+@media screen and (max-width : 744px) {
+    .productCard .cardDescription{
+        line-clamp : 15;
+        -webkit-line-clamp : 15;
+    }
+}
+@media screen and (max-width : 710px) {
+    .productCard .cardDescription{
+        line-clamp : 14;
+        -webkit-line-clamp : 14;
+    }
+}
+@media screen and (max-width : 680px) {
+    .productCard .cardDescription{
+        line-clamp : 13;
+        -webkit-line-clamp : 13;
+    }
+}
+@media screen and (max-width : 650px) {
+    .productCard .cardDescription{
+        line-clamp : 12;
+        -webkit-line-clamp : 12;
+    }
+}
+@media screen and (max-width : 620px) {
+    .productCard .cardDescription{
+        line-clamp : 11;
+        -webkit-line-clamp : 11;
+    }
+}
+@media screen and (max-width : 590px) {
+    .productCard .cardDescription{
+        line-clamp : 10;
+        -webkit-line-clamp : 10;
+    }
+}
+@media screen and (max-width : 550px) {
+    .productCard .cardDescription{
+        line-clamp : 9;
+        -webkit-line-clamp : 9;
+    }
+}
+@media screen and (max-width : 520px) {
+    .productCard .cardDescription{
+        line-clamp : 8;
+        -webkit-line-clamp : 8;
+    }
+}
+@media screen and (max-width : 490px) {
+    .productCard .cardDescription{
+        line-clamp : 7;
+        -webkit-line-clamp : 7;
+    }
+}
+@media screen and (max-width : 450px) {
+    .productCard .cardDescription{
+        line-clamp : 6;
+        -webkit-line-clamp : 6;
+    }
+}
+@media screen and (max-width : 420px) {
+    .productCard .cardDescription{
+        line-clamp : 5;
+        -webkit-line-clamp : 5;
+    }
+}
+@media screen and (max-width : 390px) {
+    .productCard .cardDescription{
+        line-clamp : 4;
+        -webkit-line-clamp : 4;
+    }
+}
+.productCard .bookInfo{
+    position : relative;
+}
+.productCard .buttons{
+    position : absolute;
+    display : flex;
+    gap : min(20px, 5%);
+    width : 100%;
+    bottom : 0;
+    right : 0;
+}
+.productCard .buttons>button{
+    flex : 1;
 }
 
 
@@ -1001,6 +1202,13 @@ section{
     max-height : 600px;
     aspect-ratio: 2/3;
     text-align: center;
+}
+@media screen and (max-width : 767px) {
+    .productImage{
+        max-height : none;
+        width : 100%;
+        aspect-ratio : unset;
+    }
 }
 .productInfo{
     flex : 1;
@@ -1101,15 +1309,15 @@ span.number{
 
 
 /*bbs section#lnb*/
-@media screen and (min-width : 768px) {
+@media screen and (min-width : 1200px) {
     #bbs .lnbBar{
         float : right;
         min-width : 176px;
     }
 }
-@media screen and (max-width : 767px) {
+@media screen and (max-width : 1199px) {
     #bbs .lnbBar{
-        margin-bottom : 20px;
+        margin-bottom : 20px;        
     }
 }
 #bbs .lnb{
@@ -1141,6 +1349,7 @@ span.number{
     margin-right: 10px;
 }
 #bbs .review{
+    width: 100%;
     border-radius: 10px;
     padding: 10px;
     cursor: pointer;
@@ -1383,7 +1592,7 @@ span.number{
         width : 90%;
         margin : 20px auto;
     }
-    #foreign{
+    #foreignPopup #foreign{
         width : 100%;
         height : calc(100vh - 150px);
         overflow : auto;
