--- a/css/master.css
+++ b/css/master.css
@@ -72,8 +72,8 @@ img{
     z-index : 998;
     background : rgba(0,0,0,0.5);
     position : fixed;
-    width : 100%;
-    height : 100%;
+    width : 100vw;
+    height : 100vh;
     top : 0;
     left : 0;
     display : none;
@@ -82,17 +82,19 @@ img{
     position : fixed;
     z-index : 999;
     background : white;
+    width : 400px;
     height : 600px;
-    width : 60%;
-    left : 20%;
+    left : calc(50% - 200px);
     top : 160px;
     border-radius : 20px;
     display : none;
+    box-shadow : 0 0 3px rgba(0,0,0,0.5);
 }
 @media screen and (max-width : 767px) {
     #loginForm, #registerForm{
         width : 80vw;
         left : 10vw;
+        top : 10%;
     }
 }
 #registerForm{
@@ -196,7 +198,7 @@ label{
     }
 }
 #header{
-    width : 100%;
+    width : 100vw;
     position : fixed;
     top : 0;
     left : 0;
@@ -264,7 +266,7 @@ label{
 }
 
 #header nav{
-    width : 100%;
+    width : 100vw;
     background : #a77523;
 }
 .gnb{
@@ -386,9 +388,6 @@ label{
         background-size : 100%;
         transition : .3s;
     }
-    #loginForm, #registerForm{
-        top : 10%;
-    }
     #loginForm .loginHelp>a, .register{
         padding : 0 5px;
     }
@@ -474,7 +473,9 @@ footer>.footerInfo>span{
 }
 #content{
     max-width : 1200px;
-    margin : 160px auto 120px;
+    margin : 160px auto 0;
+    padding-bottom : 120px;
+    overflow : hidden;
 }
 section{
     margin : 0 auto 75px;
@@ -700,6 +701,9 @@ section{
     position : relative;
     min-width : 250px;
 }
+.foreignCover img{
+    width : 100%;
+}
 .bookPreview .viewer{
     position : absolute;
     bottom : 10px;
@@ -712,13 +716,23 @@ section{
 
 /*index section#hotReview*/
 .bbsPreview{
+    padding : min(20px ,1vw);
+    border-radius : min(20px, 1vw);
+    border : 1px solid #999;
     display : flex;
     gap : 20px;
     flex-wrap : wrap;
     justify-content : space-between;
 }
+.bbsPreview img{
+    max-width : 50vw;
+    border-radius : min(20px, 1vw) 0 0 min(20px, 1vw);
+}
 .bookInfo{
     flex : 1;
+}
+.bookInfo .underLine{
+    margin-bottom : 20px;
 }
 
 
@@ -1498,7 +1512,7 @@ span.number{
     position : absolute;
     left : 0;
 }
-#bbsWrite article{
+#bbsWrite #content{
     padding-top : 45px;
 }
 
